--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.4",
     "axios": "^1.0.0",
+    "highcharts": "^10.2.1",
+    "highcharts-react-official": "^3.1.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
